--- a/Rest_Assured_assignment_RE/pom.xml
+++ b/Rest_Assured_assignment_RE/pom.xml
@@ -33,6 +33,13 @@
             <artifactId>json</artifactId>
             <version>20210307</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>4.3.3</version>
+        </dependency>
+
     </dependencies>
 
 </project>
